# VoronoiMeshProject

./: .gitignore  CMakeLists.txt  Makefile  Makefile_full  README  README.md  T.vtk  alloc.f90  bibli_init.f90  delon.f90  dirgen.f90  end_init.plt  files.txt  freel  isoB.10001  make_voronoi.f90  mesh.10001  mesh_data.f90  our_module.f90  part.10001  script.gnu  set_vertexid.f90  trigran.f90  voronoi_mesher.f90  voronoi_to_staggered.f90
EXECUTION/: T.mesh  cavite.mesh  gnu.gnu  gnu2.gnu  gnup.gnu  script.gnu  script2D.gnu  script3D.gnu  script_lloyds.gnu  sedov.mesh
src/: alloc.f90  bibli_init.bak  bibli_init.f90  delon.f90  make_voronoi.f90  masscenter.f90  mesh_data.f90  our_module.f90  utils.f90  voronoi_mesher.bak  voronoi_mesher.f90  voronoi_to_staggered.f90
src_versionValentin/: allocation.f90  voronoi_mesher_main.f90
src_versionValentin_1/: bibli_init.f90  mesh_data.f90  our_module.f90
voronoiValentin/source/: main.cpp
voronoiValentin/src/: VEdge_mod.f90  VEvent_mod.f90  VParabola_mod.f90  VPoint_mod.f90  Voronoi_mod.f90
